# oxidane

./: .gitattributes  README.md
Assembly/: Status Report.Txt
Assembly/oxidane/: Pick Place for board.txt  bom-oxidane.xls
Drawing/: Status Report.Txt
Drawing/oxidane/: board.step
Gerber/: Status Report.Txt
Gerber/oxidane/: board.DRR  board.EXTREP  board.GBL  board.GBP  board.GBS  board.GD1  board.GG1  board.GM1  board.GM7  board.GTL  board.GTO  board.GTP  board.GTS  board.LDP  board.REP  board.RUL  board.TXT  board.apr
board/: board.PcbDoc  oxidane.DsnWrk  oxidane.PrjPcb
firmware/carbonite/: .gitignore  .mxproject  Dockerfile  Makefile  STM32L151C8Ux_FLASH.ld  carbonite.ioc
firmware/oxidane/: Cargo.toml  Makefile  memory.x  oxidane.project  oxidane.workspace  project.bertos
firmware/oxidane/bertos/drv/: ow_1wire.c  ow_1wire.h  ow_ds18x20.c  ow_ds18x20.h
firmware/oxidane/bertos/prg_scripts/arm/: flash-stm32.sh
firmware/oxidane/crates/si4455/: Cargo.toml
firmware/oxidane/crates/si4455/src/: defs.rs  lib.rs
firmware/oxidane/crates/stm32l151-hal/: Cargo.toml
firmware/oxidane/crates/stm32l151-hal/src/: delay.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  spi.rs  time.rs
firmware/oxidane/oxidane/: main.c  oxidane.mk  oxidane_user.mk
firmware/oxidane/oxidane/cfg/: cfg_1wire.h
firmware/oxidane/oxidane/hw/: hw_1wire.h  hw_spi.h
firmware/oxidane/script/: bootstrap  build  server  setup
firmware/oxidane/src/: log.rs  main.rs  radio_config.rs
programmer/: board.PcbDoc  microcontroller.SchDoc  programmer.PrjPcb  radio.SchDoc
schematics/: oxidane.DsnWrk
schematics/Drawing/: Status Report.Txt
schematics/board/: .gitignore  board.PcbDoc  connectors.SchDoc  microcontroller.SchDoc  (+2 more)
(+36 files in other folders)
