[package]
name = "oxidane"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]

[dependencies]
cortex-m = "0.5.0"
cortex-m-rt = "0.5.0"
panic-abort = "0.2.0"
nb = "0.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies.stm32l151-hal]
path = "crates/stm32l151-hal"
features = ["rt"]

[dependencies.si4455]
path = "crates/si4455"

[profile.release]
debug = true
lto = true
opt-level = "s"
