[package]
name = "stm32l151-hal"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro@develer.com>"]

[dependencies]
cortex-m = "0.5.0"
embedded-hal = "0.2.0"
nb = "0.1.0"

[dependencies.stm32l1]
features = ["stm32l151"]
version = "0.2.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["stm32l1/rt"]
